--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.14.0",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.4",
     "nodemon": "^3.1.4",
+    "playwright": "^1.48.1",
     "pm2": "^5.4.2",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
@@ -40,6 +42,7 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.1",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.5",
     "superjson": "^2.2.1",
     "tsx": "^4.19.0",
     "zod": "^3.23.3"
@@ -53,6 +56,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sharp": "^0.31.1",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
