--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.29.2",
+    "@dynamic-labs/ethereum": "^3.4.2",
+    "@dynamic-labs/sdk-react-core": "^3.4.2",
     "@google/generative-ai": "^0.21.0",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
@@ -32,8 +34,10 @@
     "dotenv": "^16.4.5",
     "geist": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "next": "^14.2.4",
     "nodemon": "^3.1.4",
+    "pino-pretty": "^11.3.0",
     "playwright": "^1.48.1",
     "pm2": "^5.4.2",
     "react": "^18.3.1",
@@ -46,6 +50,7 @@
     "sharp": "^0.33.5",
     "superjson": "^2.2.1",
     "tsx": "^4.19.0",
+    "viem": "^2.21.29",
     "zod": "^3.23.3",
     "zod-to-json-schema": "^3.23.3"
   },
