--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.29.2",
     "@google/generative-ai": "^0.21.0",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
@@ -45,7 +46,8 @@
     "sharp": "^0.33.5",
     "superjson": "^2.2.1",
     "tsx": "^4.19.0",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^2.7.2",
