--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@stylistic/eslint-plugin-js": "^2.7.2",
     "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/bcrypt": "^5.0.2",
@@ -72,6 +73,7 @@
     "eslint-plugin-react-server-components": "^1.2.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unused-imports": "^4.1.3",
+    "hardhat": "^2.22.13",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
