--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@xmtp/xmtp-js": "^13.0.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "geist": "^1.3.0",
