--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@xmtp/xmtp-js": "^13.0.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
     "geist": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
